@@ -2,8 +2,7 @@
 TODO:
  - check comment 3, Wrong default visibility marker for classes - ID: 2539795,
    http://sourceforge.net/tracker/?func=detail&aid=2539795&group_id=219599&atid=1046865
- - QuickFix: Delete unused class
-  - Marker test only, but used in plugin.xml
+ - Marker test only, but used in plugin.xml
 
 //------------------------------------------------------------------------------
 Code examples:
