@@ -170,7 +170,8 @@ XMLReport_WriteOk=UCDetector found {0} warnings. See reports in: {1}.
 XMLReport_WriteNoWarnings=UCDetector found no warnings. No report is created.
 XMLReport_WriteError=Can't create UCDetector report in {0}
 UseFinalQuickFix_label=Add keyword 'final'
-DeleteQuickFix_label=Delete code
+DeleteCodeQuickFix_label=Delete code
+DeleteFileQuickFix_label=Delete file
 LineCommentQuickFix_label=Turn lines into java comments
 UseTag_NO_UCD_QuickFix_label=Add comment at line end: // NO_UCD
 UseAnnotation_UCD_QuickFix_label=Add @SuppressWarnings("ucd")
