@@ -4,6 +4,7 @@ New features:
  - Headless: Iterate over projects or resources. Use option file
  - Better html report: Show icons, author, change report file name
  - Smaller xml report
+ - Delete file QuickFix for unused classes
 
 Bugfixes:
  - QuickFix was broken, when there are several classes in one java file
